--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,8 @@
 envlist=
     docs,
     py27-django{111},
-    py35-django{111,20,21},
-    py36-django{111,20,21},
+    py35-django{111,20,21,22},
+    py36-django{111,20,21,22},
 
 [testenv]
 changedir=
@@ -18,6 +18,7 @@ deps =
     django111: django>=1.11,<1.12
     django20: django>=2.0,<2.1
     django21: django>=2.1,<2.2
+    django22: django>=2.2,<2.3
 
 commands =
     pytest --flake8 --cov=oidc_provider {posargs}
